fix overflow problem

--- a/docs/.theme/assets/_default.scss
+++ b/docs/.theme/assets/_default.scss
@@ -29,7 +29,7 @@ img.do {
   h2, h3, h4, h5, h6 {
     &, code {
       @include theme("color", $theme-color-fg);
-      overflow: scroll;
+      overflow: auto;
     }
   }
 
@@ -122,6 +122,7 @@ img.do {
   table {
     border-spacing: 0;
     width: 100%;
+    table-layout: fixed;
 
     @include border();
     @include radius();
@@ -129,7 +130,8 @@ img.do {
     tr {
       td, th {
         @include border(bottom);
-
+        overflow: auto;
+        text-overflow: clip;
         padding: 1vh 1vw;
       }
 
